--- a/application/src/styles/nav.css
+++ b/application/src/styles/nav.css
@@ -1,70 +1,34 @@
 #navigation{
-	/* background: url("./bg.png"); */
-	background-color: rgba(69,60,60, 100%);
-	color: white;
-	width: 100%;
-	height: 40vh;
-    align-items: center;
+	position: absolute;
 	display: flex;
-	flex-direction: column;	
+	justify-content: center;
+	align-items: flex-end;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	/* background: linear-gradient(135deg, #000000, #543c38, #7d5b54, #a67e71, #d2b48c); */
+
 }
 
 .bar{
-	position: fixed;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	height: 20vh;
-	/* background: url("./bg.png"); */
-	background-color: rgba(69,60,60, 100%);
-}
-
-.logo{
-	
+	/* position: fixed; */
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	width: 15%;
-	font-size: 24px;
+	width: 250px;
+	height: 40px;
+	margin-bottom: 2rem;
+	border-radius: 2em;
+	/* background: url("./bg.png"); */
+	background-color: white/*rgba(69,60,60, 60%)*/;
+	/* opacity: 0.5; */
+	-webkit-box-shadow: 0px 0px 38px -10px rgba(69,60,0,1);
+	-moz-box-shadow: 0px 0px 38px -10px rgba(69,60,0,1);
+	box-shadow: 0px 0px 38px -10px rgba(69,60,0,1);
 	
+	z-index: 9999;
 }
 
-.logo-img{
-	width: 40%;
-	height: 45px;
-}
-
-
-.menus{
-	display: grid;
-	gap: 2rem;
-	grid-template-columns: 5rem 5rem 5rem 5rem;
-	grid-template-rows:100%;
-	width: 50%;
-	height: 100%;
-	place-content: center;
-	place-items: center;
-}
-
-.menu{
-	display: flex;
-	justify-content: center;
-	flex-direction: row;
-	align-items: center;
-	height: 100%;
-}
-
-.menu:hover, .active{
+.bar > * {
 	cursor: pointer;
-	margin-bottom:-4px;
-	border-bottom: 4px solid #fbaa0d;
-}
-
-.auth{
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 15%;
-	height: 100%;
 }
