--- a/application/src/styles/socials.css
+++ b/application/src/styles/socials.css
@@ -5,14 +5,14 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 200px; /* Adjust the width as needed */
-    height: 40px; /* Adjust the height as needed */
+    width: 200px;
+    height: 60px;
     border-radius: 10px 0px 0px 10px;
-    -webkit-box-shadow: -7px 1px 39px -11px rgba(254,128,46,1);
-    -moz-box-shadow: -7px 1px 39px -11px rgba(254,128,46,1);
-    box-shadow: -7px 1px 39px -11px rgba(254,128,46,1);
-
-    background-color: #FE802E;
+    -webkit-box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
+    -moz-box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
+    box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
+    background-color: white;
+    z-index: 1000;
   }
 
   #social-holder > * {
@@ -23,6 +23,7 @@
   
   @media (max-width: 768px) {
     #social-holder {
+      display: none;
       flex-direction: column;
       align-items: flex-end;
       right: 1em;
