--- a/application/src/App.css
+++ b/application/src/App.css
@@ -2,7 +2,14 @@
   text-align: center;
   width: 100%;
   height: 100vh;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   /* background-color: red; */
+}
+
+*::-webkit-scrollbar {
+  width: 0;
+  display: none;
 }
 
 .App-logo {
