--- a/application/src/styles/socials.css
+++ b/application/src/styles/socials.css
@@ -11,7 +11,7 @@
     -webkit-box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
     -moz-box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
     box-shadow: -7px 1px 39px -11px rgb(70, 70, 70);
-    background-color: white;
+    background-color: rgba(23, 23, 23, 0.757);
     z-index: 1000;
   }
 
