--- a/application/src/pages/jobs/utils/styles.css
+++ b/application/src/pages/jobs/utils/styles.css
@@ -6,11 +6,16 @@
 }
 
 .header-holder {
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em 0;
-  border-bottom: 1px solid #ccc;
+  padding: 0em 0;
+  width: 100vw;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0px 0px 7px 0px rgba(189, 189, 189, 0.75);
 }
 
 .header-wrapper {
@@ -81,15 +86,16 @@ h2 {
 /* Jobs Page */
 
 .job-app-container {
-  height: 100vh;
-  padding: 1em 2em;
   box-sizing: border-box;
+  background-color: #f5f2f2;
+  padding: 11vh 11vh 0 11vh;
 }
 
 .job-app-wrapper {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
 }
 
 .search-bar-section {
@@ -130,7 +136,9 @@ h2 {
 .main {
   display: flex;
   flex: 1;
-  padding: 1em 0;
+  padding: 1em 2em;
+  /* margin-top: 1em; */
+  /* outline: 1px solid black; */
 }
 
 .main-section {
@@ -138,4 +146,21 @@ h2 {
   margin-right: 1em;
   overflow-y: auto;
   max-height: calc(100vh - 15em);
+}
+
+@media (max-width: 768px) {
+  .main-section {
+    margin: 0;
+    padding: 1em 0;
+  }
+  .main {
+    margin: 0;
+    padding: 0 2em;
+  }
+  .job-app-container {
+    /* padding: 1em 2em; */
+    box-sizing: border-box;
+    background-color: #f5f2f2;
+    padding: 17vh 0 0 0;
+  }
 }
